--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,6 @@ foreach(mod ${VegaFEM_Modules})
   add_subdirectory(lib${mod})
 endforeach()
 
-add_subdirectory(util/volumetricMeshUtilities)
-if (VegaFEM_ENABLE_OpenGL_SUPPORT)
-  add_subdirectory(util/interactiveDeformableSimulator)
-endif()
+if(BUILD_UTILITIES)
+  add_subdirectory(util)
+endif(BUILD_UTILITIES)
