--- a/src/libclothBW/CMakeLists.txt
+++ b/src/libclothBW/CMakeLists.txt
@@ -1,20 +1,30 @@
 set(clothbw_srcs
-	clothBW.cpp
-	clothBWFromObjMesh.cpp
-	clothBWMT.cpp
+  clothBW.cpp
+  clothBWFromObjMesh.cpp
 )
 
-vega_add_library(clothbw
+set(clothbw_hdrs
+  clothBW.h
+  clothBWFromObjMesh.h
+)
+
+if(VegaFEM_ENABLE_PTHREADS_SUPPORT)
+  list(APPEND clothbw_hdrs clothBWMT.h)
+  list(APPEND clothbw_srcs clothBWMT.cpp)
+endif()
+
+vega_add_library(clothBW
   SOURCES
     ${clothbw_srcs}
   PUBLIC_HEADERS
-    clothBW.h
-    clothBWFromObjMesh.h
-    clothBWMT.h
+    ${clothbw_hdrs}
 )
-target_link_libraries(clothbw
+
+target_link_libraries(clothBW
   PUBLIC
     objMesh
     minivector
     sparseMatrix
+  INTERFACE
+    ${CMAKE_THREAD_LIBS_INIT}
 )
