--- a/src/libisotropicHyperelasticFEM/CMakeLists.txt
+++ b/src/libisotropicHyperelasticFEM/CMakeLists.txt
@@ -1,5 +1,4 @@
-vega_add_library(isotropicHyperelasticFEM
-  SOURCES
+set(isotropichyperelasticfem_srcs     
     isotropicMaterial.cpp
     MooneyRivlinIsotropicMaterial.cpp
     neoHookeanIsotropicMaterial.cpp
@@ -8,23 +7,38 @@ vega_add_library(isotropicHyperelasticFEM
     homogeneousStVKIsotropicMaterial.cpp
     homogeneousNeoHookeanIsotropicMaterial.cpp
     isotropicHyperelasticFEM.cpp
-    isotropicHyperelasticFEMMT.cpp
     isotropicMaterialWithCompressionResistance.cpp
-  PUBLIC_HEADERS
+    )
+    
+set(isotropichyperelasticfem_hdrs 
     MooneyRivlinIsotropicMaterial.h
     StVKIsotropicMaterial.h
     homogeneousMooneyRivlinIsotropicMaterial.h
     homogeneousNeoHookeanIsotropicMaterial.h
     homogeneousStVKIsotropicMaterial.h
     isotropicHyperelasticFEM.h
-    isotropicHyperelasticFEMMT.h
     isotropicMaterial.h
     isotropicMaterialWithCompressionResistance.h
     neoHookeanIsotropicMaterial.h
+    )
+
+    
+if(VegaFEM_ENABLE_PTHREADS_SUPPORT)
+  list(APPEND isotropichyperelasticfem_hdrs isotropicHyperelasticFEMMT.h)
+  list(APPEND isotropichyperelasticfem_srcs isotropicHyperelasticFEMMT.cpp)
+endif()
+
+vega_add_library(isotropicHyperelasticFEM
+  SOURCES
+    ${isotropichyperelasticfem_srcs}
+  PUBLIC_HEADERS
+    ${isotropichyperelasticfem_hdrs}
 )
 target_link_libraries(isotropicHyperelasticFEM
   PUBLIC
     minivector
     volumetricMesh
     sparseMatrix
+  INTERFACE
+    ${CMAKE_THREAD_LIBS_INIT}
 )
