--- a/src/libreducedStvk/CMakeLists.txt
+++ b/src/libreducedStvk/CMakeLists.txt
@@ -1,18 +1,31 @@
-vega_add_library(reducedStvk
-  SOURCES
+set(reducedstvk_srcs
     StVKReducedInternalForces.cpp
-    StVKReducedInternalForcesMT.cpp
     StVKReducedStiffnessMatrix.cpp
     StVKReducedHessianTensor.cpp
-  PUBLIC_HEADERS
+)
+set(reducedstvk_hdrs
     StVKReducedHessianTensor.h
     StVKReducedInternalForces.h
-    StVKReducedInternalForcesMT.h
     StVKReducedStiffnessMatrix.h
+)
+
+if(VegaFEM_ENABLE_PTHREADS_SUPPORT)
+  list(APPEND reducedstvk_srcs StVKReducedInternalForcesMT.cpp)
+  list(APPEND reducedstvk_hdrs StVKReducedInternalForcesMT.h)
+endif()
+
+vega_add_library(reducedStvk
+  SOURCES
+    ${reducedstvk_srcs}
+  PUBLIC_HEADERS
+    ${reducedstvk_hdrs}
 )
 target_link_libraries(reducedStvk
   PUBLIC
     stvk
     modalMatrix
     matrix
+    ${BLAS}
+    ${CBLAS_LIBRARY}
+    ${LAPACK_LIBRARIES}
 )
