--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,8 @@ configuration:
  - Release
 
 install:
- - cinst: ninja cmake
+ - ps: cinst ninja
+ - ps: cinst cmake
 
 build_script:
  - cmd: set PATH=C:\Program Files (x86)\CMake\bin;%PATH%
