--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -1,10 +1,11 @@
-
-if(VegaFEM_BUILD_MODEL_REDUCTION)
+if (VegaFEM_BUILD_MODEL_REDUCTION)
   add_subdirectory(largeModalDeformationFactory)
-  if(VegaFEM_ENABLE_Cg_SUPPORT)
+  if (VegaFEM_ENABLE_Cg_SUPPORT)
     add_subdirectory(reducedDynamicSolver-rt)
   endif()
-endif(VegaFEM_BUILD_MODEL_REDUCTION)
-add_subdirectory(displayObj)
-add_subdirectory(interactiveDeformableSimulator)
+endif()
+if (VegaFEM_ENABLE_OpenGL_SUPPORT)
+  add_subdirectory(displayObj)
+  add_subdirectory(interactiveDeformableSimulator)
+endif()
 add_subdirectory(volumetricMeshUtilities)
